@@ -1,3 +1,8 @@
+2003-05-28  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* gnomine.c: Use gtk_window_present for displaying dialogs.
+	Fixes bug #113893, thanks Steve.
+
 2003-05-21  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* gnomine.c (preferences_callback): Fixed code to make 
